--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@ Team Diffərənt out 👊🎤💨
                     <source src="assets/vid/vid_lang_lfs.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <!-- <iframe class="caseVideo"
+                    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe> -->
             </div>
         </section>
 
@@ -236,7 +239,7 @@ Team Diffərənt out 👊🎤💨
                             <div class="card">
                                 <h4>factor of succes 1</h4>
                                 <h3>Pain points</h3>
-                                <p>The pain points have been resolved, therefore they have been practically tested and backed-up theoretically.</p>
+                                <p>The pain points have been resolved, therefore they have been practically tested and backed-up theoretically. We prototyped different proposals to solve the painpoints. These can be found in the prototypes down below.</p>
                             </div>
                         </div>
                         <div class="cardSecond col-12 col-lg-4">
@@ -336,7 +339,7 @@ Team Diffərənt out 👊🎤💨
                         <div class="sticky col-12 col-md-4" id="insightsIntro">
                             <h4>research</h4>
                             <h3>Our most <br>important insights</h3>
-                            <p>Hier komt wellicht een introtekst die wat vertelt over waar we research naar hebben gedaan en waarom.</p>
+                            <p>We displayed all of our insight on a wall by connecting them with the right elements. Check out some examples in the mockup of the Routeplaner on the right.</p>
                         </div>
                         <div class="fadeIn col-12 col-md-8">
                             <img src="assets/img/insightsANWB.png" alt="Insights about the ANWB Routeplanner">
@@ -408,7 +411,7 @@ Team Diffərənt out 👊🎤💨
                             <div class="card">
                                 <h4>Concept 2</h4>
                                 <h3>Motion design</h3>
-                                <p>The website contains (almost) no motion through micro-interactions. As a result, the ANWB website does not meet the ultimate user experience that the ANWB wants to achieve. To explore the limits of motion through micro-interactions within this concept direction, we have drafted principle and guideline directions. Mild, playfull and nudging. This is the concept we have focused on after consultation with the client. We only had to take a second look at the names of the guideline directions and the differentiation of these guideline directions.</p>
+                                <p>The website contains no motion through micro-interactions. As a result, the ANWB website does not meet the ultimate user experience that the ANWB wants to achieve. To explore the limits of motion through micro-interactions within this concept direction, we have drafted principle and guideline directions. Mild, playfull and nudging.</p>
                             </div>
                         </div>
                     </div>
@@ -425,7 +428,7 @@ Team Diffərənt out 👊🎤💨
                     </div>
                     <div class="row">
                         <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
-                            <h5>Hier komt wellicht een introtekst die wat vertelt over waar we research naar hebben gedaan en waarom.</h5>
+                            <h5>We created an InVision DSM with motion principles, guidelines and rules. These are documented with a rationale and Framer based high-fi prototypes. The expansion of Design System Poncho serves as a manual for creating motion elements on the ANWB website.</h5>
                         </div>
                     </div>
                     <div class="fadeIn row">
@@ -463,12 +466,12 @@ Team Diffərənt out 👊🎤💨
                         <div class="cardFirst col-12 col-md-4">
                             <h4>guidelines</h4>
                             <h3>Blue sky</h3>
-                            <p>The Blue Sky guidelines are meant for elements that give the users a feeling of calmth and hierarchy and meets the expectations of the users. For example a page that now scrolls down and creates a better feeling of context.</p>
+                            <p>The Blue Sky guidelines are meant for elements that give the users a feeling of calmth and hierarchy and meets user expectations. For example a page that scrolls down and creates a better feeling of context.</p>
                         </div>
                         <div class="cardSecond col-12 col-md-4">
                             <h4>guidelines</h4>
                             <h3>Sunbeam</h3>
-                            <p>The Sunbeam guidelines are meant for elements that give the users emotion in some form of feedback. For example an inputfield that turns red when a mistake is made.</p>
+                            <p>The Sunbeam guidelines are meant for elements that give the users emotion in some form of feedback. For example an inputfield that turns red when a mistake is made. These guidelines created a big impact on emotion.</p>
                         </div>
                         <div class="col-12 col-md-4">
                             <h4>guidelines</h4>
@@ -779,13 +782,13 @@ Team Diffərənt out 👊🎤💨
                             <div class="differentSocials">
                                 <a class="button button-primary" href="https://dribbble.com/Cornoot93" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a>
                                 <a class="button button-primary" href="https://www.linkedin.com/in/corné-van-den-boogert-aab41792/" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
-                                <a class="button button-primary" href="" target="_blank"><i class="fas fa-laptop" target="_blank"></i></a>
+                                <a class="button button-primary" href="https://www.instagram.com/cornoot/" target="_blank"><i class="fas fa-laptop" target="_blank"></i></a>
                             </div>
                         </div>
                         <div class="fadeIn col-6 col-md-3">
                             <img src="assets/img/teamKayleighDeHaan.png" alt="Kayleigh de Haan">
                             <h5>Concepting</h5>
-                            <p>Kayleigh is our cheerfull idea-machine</p>
+                            <p>Kayleigh is our cheerfull ideamachine</p>
                             <div class="differentSocials">
                                 <a class="button button-primary" href="https://dribbble.com/kayleighdehaan" target="_blank"><i class="fab fa-dribbble" target="_blank"></i></a>
                                 <a class="button button-primary" href="https://www.linkedin.com/in/kayleigh-de-haan-b98735164/" target="_blank"><i class="fab fa-linkedin-in" target="_blank"></i></a>
