--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ Team Diffərənt out 👊🎤💨
         
         <!--GOOGLE/META-->
         <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
-        <title></title>
-        <!-- <meta name="description" content="Insert meta description here"> -->
+        <title>Adding Motion to ANWB’s Design System ‘Poncho’</title>
+        <meta name="description" content="The addition of motion principles, guidelines and rules to the ANWB’s Design System Poncho contributes to a consistent visual translation of the brand and the ultimate user experience.">
         <!-- <meta name="keywords" content="Insert epic keywords here"/> -->
         <meta name="author" content="Michel van Heest for Different Designers, a minor project of The Rotterdam University of Applied Sciences"/>
         <meta name="reply-to" content="contact@michelvanheest.com"/>
