fix small vid on own server?

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ Team Diffərənt out 👊🎤💨
                             <div class="protoShowWrapper tab-pane fade show" id="protoShow02" role="tabpanel" aria-labelledby="protoShow02-tab">
                                 <div class="protoShowLeft col-12 col-md-6">
                                     <video preload="auto" autoplay="" muted="" loop="" playsinline="" webkit-playsinline="" id="proto02Left">
-                                        <source src="assets/vid/proto02Left.mp4" type="video/mp4">
+                                        <source src="https://school.michelvanheest.com/different/proto02Left.mp4" type="video/mp4">
                                         Your browser does not support the videwo tag.
                                     </video>
                                 </div>
