Updated videos to match own hosting

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Team Diffərənt out 👊🎤💨
             <div class="videoWrapper">
                 <a class="cancelModal"><i class="far fa-times-circle"></i></a>
                 <video class="caseVideo" controls>
-                    <source src="assets/vid/vid_lang_lfs.mp4" type="video/mp4">
+                    <source src="https://school.michelvanheest.com/different/vid_lang_lfs.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <!-- <iframe class="caseVideo"
@@ -436,7 +436,7 @@ Team Diffərənt out 👊🎤💨
                             <!-- <img src="assets/img/prototypeMockup.png" alt="Different X ANWB final masterprototype mockup"> -->
                             <div class="prototypeFrame">
                                 <video preload="auto" autoplay="" muted="" loop="" playsinline="" webkit-playsinline="">
-                                    <source src="assets/vid/prototypeFinal_lfs.mp4" type="video/mp4">
+                                    <source src="https://school.michelvanheest.com/different/prototypeFinal_lfs.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </div>
@@ -634,7 +634,7 @@ Team Diffərənt out 👊🎤💨
                             <div class="protoShowWrapper tab-pane fade show active" id="protoShow01" role="tabpanel" aria-labelledby="protoShow01-tab">
                                 <div class="protoShowLeft col-12 col-md-6">
                                     <video preload="auto" autoplay="" muted="" loop="" playsinline="" webkit-playsinline="">
-                                        <source src="assets/vid/proto01Left.mp4" type="video/mp4">
+                                        <source src="https://school.michelvanheest.com/different/proto01Left.mp4" type="video/mp4">
                                         Your browser does not support the videwo tag.
                                     </video>
                                 </div>
