--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Team Diffərənt out 👊🎤💨
         
         <!--CUSTOM CSS-->
         <link rel="stylesheet" href="bootstrap/css/bootstrap-mvh27112019.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style1601.css">
         <script defer src="js/fontawesome-all.js"></script>
         
         <!--GOOGLE/META-->
