fixed fucking videos

--- a/index.html
+++ b/index.html
@@ -81,18 +81,18 @@ Team Diffərənt out 👊🎤💨
     </head>
     <body>
         <!--VIDEO OVERLAY-->
-        <section id="videoOverlay">
+        <!-- <section id="videoOverlay">
             <div class="videoWrapper">
-                <a class="cancelModal"><i class="far fa-times-circle"></i></a>
-                <video class="caseVideo" controls>
+                <a class="cancelModal"><i class="far fa-times-circle"></i></a> -->
+                <!-- <video class="caseVideo" controls>
                     <source src="https://school.michelvanheest.com/different/vid_lang_lfs.mp4" type="video/mp4">
                     Your browser does not support the video tag.
-                </video>
+                </video> -->
                 <!-- <iframe class="caseVideo"
                     src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                </iframe> -->
+                </iframe>
             </div>
-        </section>
+        </section> -->
 
         <section id="stickyNav">
             <div class="container-fluid hidden">
@@ -169,7 +169,7 @@ Team Diffərənt out 👊🎤💨
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <a class="button button-secondary activateModal"><i class="fas fa-play"></i>  Play case-video</a>
+                        <!-- <a class="button button-secondary activateModal"><i class="fas fa-play"></i>  Play case-video</a> -->
                         <!-- <a class="button button-secondary" href="assets/vid/different-anwb-casefilm_lfs.mp4" target="_blank" role="button">Play case-video</a> -->
                         <!-- <div class="button button-secondary activateModal">Check prototype</div> -->
                     </div>
@@ -742,10 +742,19 @@ Team Diffərənt out 👊🎤💨
 
             <!--CASEVID BOTTOM-->
             <section id="caseVideoBottom">
-                <div class="container hidden">
+                <!-- <div class="container hidden">
                     <div class="fadeIn col-12">
                         <a class="button button-secondary activateModal"><i class="fas fa-play"></i>  Play case-video</a>
                         <img src="assets/img/headerBackgroundIMG.jpg" alt="Different case-video">
+                    </div>
+                </div> -->
+                <div class="container hidden">
+                    <div class="col-12 fadeIn">
+                        <div class="videoWrapper">
+                            <iframe class="caseVideo"
+                                src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                            </iframe>
+                        </div>
                     </div>
                 </div>
             </section>
