Added buttons to DSM and guide

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Team Diffərənt out 👊🎤💨
         
         <!--CUSTOM CSS-->
         <link rel="stylesheet" href="bootstrap/css/bootstrap-mvh27112019.css">
-        <link rel="stylesheet" href="css/style1601.css">
+        <link rel="stylesheet" href="css/style2201.css">
         <script defer src="js/fontawesome-all.js"></script>
         
         <!--GOOGLE/META-->
@@ -461,6 +461,7 @@ Team Diffərənt out 👊🎤💨
                         <div class="fadeIn col-12 col-md-8">
                             <img src="assets/img/DSM.png" alt="The InVision DSM with Principles, Guidelines and Rules">
                         </div>
+                        <div class="fadeIn col-12 offset-md-7 col-md-5"><a class="button button-secondary" href="dsm" target="_blank" role="button">Check out the DSM</a></div>
                     </div>
                     <div class="sectionSpaceTop row">
                         <div class="cardFirst col-12 col-md-4">
@@ -536,6 +537,7 @@ Team Diffərənt out 👊🎤💨
                                 </li> -->
                             </ul>
                             <p>The motion impact matrix is a matrix that shows both the impact on behavior and the impact on the emotion of micro-interactions (through motion). This matrix shows impact on emotion on the vertical axis and impact on behavior on the horizontal axis. <br><br>After it has been determined where a certain interaction should be placed in the matrix, it is possible to use "overlays" of the guidelines to determine which motion guidelines and / or rule should be applied to the interaction in question.</p>
+                            <a class="button button-secondary" id="usageGuide" href="matrix-explanation" target="_blank" role="button">Check out the matrix usage guide</a>
                         </div>
                     </div>
                 </div>
