--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Team Diffərənt out 👊🎤💨
                                         <a id="conceptingLink" class="nav-link" href="#concepting">Concepting</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a id="problemStatementLink" class="nav-link" href="#problemStatement">Problem statement</a>
+                                        <a id="problemStatementLink" class="nav-link" href="#problemStatement">Concept directions</a>
                                     </li>
                                     <li class="nav-item">
                                         <a id="resultLink" class="nav-link" href="#result">The result</a>
@@ -271,7 +271,7 @@ Team Diffərənt out 👊🎤💨
                     </div>
                     <div class="row">
                         <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
-                            <h5>During the minor <span class="purpleText">User Interface and Experience Design</span> we got the assignment to investigate en develop what motion can contribute to the user experience and accessibility of the ANWB's online visitors digital experience. For this we had to make an extension to <span class="purpleText">ANWB's Design System Poncho</span> through principles and a back these up with a substantiation.</h5>
+                            <h5>During the minor <span class="purpleText">User Interface and Experience Design</span> we got the assignment to investigate and develop what motion can contribute to the user experience and accessibility of the ANWB's online visitors digital experience. For this we had to make an extension to <span class="purpleText">ANWB's Design System Poncho</span> through principles and a back these up with a substantiation.</h5>
                         </div>
                     </div>
                 </div>
@@ -339,7 +339,7 @@ Team Diffərənt out 👊🎤💨
                         <div class="sticky col-12 col-md-4" id="insightsIntro">
                             <h4>research</h4>
                             <h3>Our most <br>important insights</h3>
-                            <p>We displayed all of our insight on a wall by connecting them with the right elements. Check out some examples in the mockup of the Routeplaner on the right.</p>
+                            <p>We displayed all of our insight on a wall by connecting them with the right elements. Check out some examples in the mockup of the Routeplanner on the right.</p>
                         </div>
                         <div class="fadeIn col-12 col-md-8">
                             <img src="assets/img/insightsANWB.png" alt="Insights about the ANWB Routeplanner">
@@ -385,7 +385,7 @@ Team Diffərənt out 👊🎤💨
                 <div class="container hidden">
                     <div class="row">
                         <div class="col-12">
-                            <h2>Problem Statement</h2>
+                            <h2>Concept directions</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -493,7 +493,7 @@ Team Diffərənt out 👊🎤💨
                     </div>
                     <div class="row">
                         <div class="col-12 offset-md-1 col-md-10 offset-xl-3 col-xl-6">
-                            <h5>In order to deliver our work in a way that the ANWB can easily  work with it themselfs, we have created the "motion-impact matrix". </h5>
+                            <h5>In order to deliver our work in a way that the ANWB can easily  work with it themselves, we have created the "motion-impact matrix". </h5>
                         </div>
                     </div>
                 </div>
