Added meta LinkedIn

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@ Team Diffərənt out 👊🎤💨
 
         gtag('config', 'UA-99827935-4');
         </script>
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="https://differentdesigners.nl/">
+        <meta name="twitter:creator" content="@michelvanheest">
+        <meta name="twitter:title" content="Adding Motion to ANWB’s Design System ‘Poncho’ - Different Designers">
+        <meta name="twitter:description" content="The addition of motion principles, guidelines and rules to the ANWB’s Design System Poncho contributes to a consistent visual translation of the brand and the ultimate user experience.">
+        <meta name="twitter:image" content="https://differentdesigners.nl/DifferentDesignersLinkedIn.jpg">
+        <!-- LinkedIn -->
+        <meta property="og:title" content="Adding Motion to ANWB’s Design System ‘Poncho’ - Different Designers"/>
+        <meta property="og:image" content="https://differentdesigners.nl/DifferentDesignersLinkedIn.jpg">
+        <meta property="og:description" content="The addition of motion principles, guidelines and rules to the ANWB’s Design System Poncho contributes to a consistent visual translation of the brand and the ultimate user experience."/>
+        <meta property="og:url" content="https://differentdesigners.nl/" />
     </head>
     <body>
         <!--VIDEO OVERLAY-->
